Temporarily removed Greenhouse Accelerator link from navigation bars

--- a/server/src/pages/templates/navbar_guest.html
+++ b/server/src/pages/templates/navbar_guest.html
@@ -2,6 +2,6 @@
     <ul>
         <li><a href="/login">Login</a></li>
         <li><a href="/signup">Sign Up</a></li>
-        <li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>		     	
+        <!-- <li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li> -->
     </ul>
 </nav>
