--- a/server/src/pages/templates/navbar_user.html
+++ b/server/src/pages/templates/navbar_user.html
@@ -3,6 +3,6 @@
         <li><a href="/logout">Logout</a></li>
         <li><a href="/profile">Profile</a></li>
         <li><a href="/">Home</a></li>
-        <li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>	     	
+        <!-- <li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li> -->
     </ul>
 </nav>
